--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,12 @@
     margin: 0;
     border: 0;
 }
+
+body {
+    background-color: burlywood;
+}
+
+#country-info {
+    display: flex;
+    align-items: center;
+}
