--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,17 @@
-* {
-    background-color: rgb(24, 21, 17);
+body {
+    font-family: Arial, sans-serif;
 }
 
 #country-info {
-    display: flex;
-    align-items: center;
+    background-color: lightblue;
+    padding: 20px;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+li {
+    margin: 10px 0;
 }
